<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_new_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:text="@string/txt_new_deadline"
        android:textColor="@color/Black"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/edt_new_deadline_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/new_deadline_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_margin_bottom">

            <TextView
                android:id="@+id/txt_deadline_title"
                android:text="@string/txt_notice_title"
                android:textColor="@color/Black"
                android:textSize="@dimen/text_size_large" />

            <EditText
                android:id="@+id/edt_deadline_title"
                android:layout_span="2"
                android:textSize="@dimen/text_size_large" />
        </TableRow>

        <TableRow
            android:id="@+id/edt_new_deadline_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_deadline_content"
                android:text="@string/txt_notice_content"
                android:textColor="@color/Black"
                android:textSize="@dimen/text_size_large" />

            <EditText
                android:id="@+id/edt_deadline_content"
                android:layout_span="2"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textSize="@dimen/text_size_large" />
        </TableRow>

        <TableRow
            android:id="@+id/new_deadline_datepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_margin_bottom">

            <TextView
                android:id="@+id/txt_new_deadline_datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_new_deadline_datepicker"
                android:textColor="@color/Black"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/txt_new_deadline_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_deadline_date"
                android:textColor="#FF0000"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/btn_datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date" />

        </TableRow>

        <TableRow
            android:id="@+id/new_deadline_timepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_margin_bottom">

            <TextView
                android:id="@+id/txt_new_deadline_timepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_new_deadline_timepicker"
                android:textColor="@color/Black"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/txttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_deadline_time"
                android:textColor="#FF0000"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:id="@+id/btntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time" />

        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/edit_margin_bottom">

        <Button
            android:id="@+id/btn_deadline_save"
            android:layout_marginLeft="@dimen/edit_margin_left"
            android:layout_marginRight="@dimen/edit_margin_right"
            android:background="@drawable/button"
            android:text="@string/btn_save"
            android:textColor="@color/White"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_deadline_discard"
            android:layout_marginLeft="@dimen/edit_margin_left"
            android:layout_marginRight="@dimen/edit_margin_right"
            android:background="@drawable/button"
            android:text="@string/btn_discard"
            android:textColor="@color/White"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </TableRow>

</LinearLayout>
