<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.hhmhieu.vnuklmslogin.Control.MainActivity">

    <ImageView
        android:id="@+id/vnuk_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/img_vnuklogo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vnuk_logo"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:hint="@string/hint_std_id"
        android:padding="10dp"
        android:textSize="@dimen/text_size_large" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="@dimen/text_size_large" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:background="@drawable/button"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:background="@color/Transparent"
        android:text="@string/btn_forgot"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_small" />
</RelativeLayout>
