<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lecture_doc_sharing_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:text="@string/btn_doc_sharing"
        android:textColor="@color/Black"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ltr_doc_sharing_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lecture_doc_sharing_title"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_student_syllabus_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:background="@drawable/button"
            android:text="@string/upload_syllabus"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_student_lecture_note_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:background="@drawable/button"
            android:text="@string/upload_lecture_note"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />



    </LinearLayout>
</RelativeLayout>